2012-03-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c,
	  support/regression/tests/bug3502965.c:
	  Fixed bug #3502965.
	* support/regression/tests/gcc-torture-execute-20030209-1.c,
	  support/regression/tests/gcc-torture-execute-20031012-1.c:
	  Added explanation for why tests don't work on gbz80.
	* src/SDCCmain.c:
	  Reenable non-compliant SDCC macros (but not for --std-c89, --std-c99, --std-c11).
	* src/z80/ralloc2.cc:
	  More flecible handling of accumulator in multipliation and return.

2012-03-14 Borut Razem <borut.razem AT gmail.com>

	* device/non-free/include/*, device/non-free/lib/*:
	  added info about "The header files should state that they are
	  only to be used with authentic Microchip devices" Microchip
	  requirement and GPL incompatibility

2012-03-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20010224-1.c,
	  support/regression/tests/gcc-torture-execute-20030714-1.c:
	  Disable tests for gcc older than 5.0.

2012-03-13 Borut Razem <borut.razem AT gmail.com>

	* device/include/*, device/lib/*: corrected GPL license version
	  from 2.1 to 2: GPLv2.1 does not exist

2012-03-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-2001*.c,
	  support/regression/tests/gcc-torture-execute-2003*.c:
	  Added some more tests from the execute part of the gcc torture regression test suite.

2012-03-12 Borut Razem <borut.razem AT gmail.com>

	* doc/TININative.txt: removed, available at 
	  http://sourceforge.net/apps/trac/sdcc/wiki/Using%20SDCC%20to%20develop%20Native%20Java%20functions
	* doc/Makefile.in:
	  don't generate unusable html and txt versions of sdccman

2012-03-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/z80/peeph-r2k.def,
	  src/z80/peeph-z80.def,
	  support/regression/tests/bug3501942.c:
	  Fixed bug #3501942.

2012-03-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c: